// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonTable component should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="Loading"
        class="pf-v5-c-table pf-m-grid-md"
        data-ouia-component-id="SkeletonTable"
        data-ouia-component-type="PF5/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v5-c-table__thead"
          data-ouia-component-id="SkeletonTableHeader-thead"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTableHeader-tr-head"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v5-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-0"
              scope="col"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="pf-v5-c-table__tbody"
          data-ouia-component-id="SkeletonTable-tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-0"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-0-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-0-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-1"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-1-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-1-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-2"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-2-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-2-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-3"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-3-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-3-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-4"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-4-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-4-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="Loading"
      class="pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="SkeletonTable"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
        data-ouia-component-id="SkeletonTableHeader-thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTableHeader-tr-head"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v5-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-0"
            scope="col"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        data-ouia-component-id="SkeletonTable-tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-0"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-0-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-0-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-1"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-1-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-1-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-2"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-2-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-2-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-3"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-3-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-3-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-4"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-4-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-4-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SkeletonTable component should render correctly with rows 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="Loading"
        class="pf-v5-c-table pf-m-grid-md"
        data-ouia-component-id="SkeletonTable"
        data-ouia-component-type="PF5/Table"
        data-ouia-safe="true"
        role="grid"
        rows="10"
      >
        <thead
          class="pf-v5-c-table__thead"
          data-ouia-component-id="SkeletonTableHeader-thead"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTableHeader-tr-head"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v5-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-0"
              scope="col"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="pf-v5-c-table__tbody"
          data-ouia-component-id="SkeletonTable-tbody"
          role="rowgroup"
        >
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-0"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-0-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-0-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-1"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-1-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-1-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-2"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-2-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-2-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-3"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-3-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-3-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
          <tr
            class="pf-v5-c-table__tr"
            data-ouia-component-id="SkeletonTable-tr-4"
            data-ouia-component-type="PF5/TableRow"
            data-ouia-safe="true"
          >
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-4-0"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
            <td
              class="pf-v5-c-table__td"
              data-ouia-component-id="SkeletonTable-td-4-1"
              tabindex="-1"
            >
              <div
                class="pf-v5-c-skeleton"
              >
                <span
                  class="pf-v5-screen-reader"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="Loading"
      class="pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="SkeletonTable"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
      rows="10"
    >
      <thead
        class="pf-v5-c-table__thead"
        data-ouia-component-id="SkeletonTableHeader-thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTableHeader-tr-head"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v5-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-0"
            scope="col"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        data-ouia-component-id="SkeletonTable-tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-0"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-0-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-0-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-1"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-1-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-1-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-2"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-2-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-2-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-3"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-3-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-3-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="SkeletonTable-tr-4"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-4-0"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-ouia-component-id="SkeletonTable-td-4-1"
            tabindex="-1"
          >
            <div
              class="pf-v5-c-skeleton"
            >
              <span
                class="pf-v5-screen-reader"
              />
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
